--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@zeit/next-typescript": "^1.1.1",
     "next": "^7.0.2",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "styled-components": "^4.0.3"
   },
   "devDependencies": {
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
     "@types/react-dom": "16.0.8",
+    "babel-plugin-styled-components": "^1.8.0",
     "react-docgen-typescript": "^1.12.0",
     "react-styleguidist": "^8.0.2",
     "typescript": "3.1.1"
