--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,13 @@
 {
-  "presets": [
-    "next/babel",
-    "@zeit/next-typescript/babel"
-  ]
+  "env": {
+    "development": {
+      "presets": ["next/babel"]
+    },
+    "production": {
+      "presets": ["next/babel"]
+    },
+    "test": {
+      "presets": ["env", "react"]
+    }
+  }
 }
