--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "env": {
     "development": {
-      "presets": ["next/babel"]
+      "presets": ["next/babel", "@zeit/next-typescript/babel"]
     },
     "production": {
-      "presets": ["next/babel"]
+      "presets": ["next/babel", "@zeit/next-typescript/babel"]
     },
     "test": {
       "presets": ["env", "react"]
